# cmake-explained

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  Tutorial.md
DocNotes/cmake-commands/project/01/: CMakeLists.txt
DocNotes/cmake-commands/project/02/a/: CMakeLists.txt
DocNotes/cmake-commands/project/02/b/: CMakeLists.txt
DocNotes/cmake-commands/project/03/: CMakeLists.txt
DocNotes/cmake-commands/project/03/sub1/: CMakeLists.txt
DocNotes/cmake-commands/project/04/: CMakeLists.txt
DocNotes/cmake-commands/project/04/sub1/: CMakeLists.txt
DocNotes/cmake-modules/CheckLanguage/: CMakeLists.txt
examples/code/: main.cpp
examples/code/simplecalc/include/simplecalc/: simplecalc.hpp
examples/code/simplecalc/src/: simplecalc.cpp
examples/code/simplestrutils/src/: simplestrutils.cpp
usage-req/: CMakeLists.txt  main-not-using.cpp  main-only-including-header.cpp  main-using-lib.cpp
usage-req-2/: CMakeLists.txt
usage-req/simplestrutils/: CMakeLists.txt
usage-req/simplestrutils/include/simplestrutils/: simplestrutils.hpp
usage-req/simplestrutils/src/: simplestrutils.cpp
